crates/plotnik-lib/tests/05-typegen/recursion/error_row_capture_in_recursive_cycle.txt
A = {
  (expression_statement)
  (statement_block (B)* @xs)? @blk
}

B = {
  (debugger_statement)
  (statement_block (A))?
}
------------------ DIAGNOSTICS -------------------
error: one repeat of this `*` group doesn't match exactly one node, so there is no single node to bind per element
 --> query.ptk:3:20
  |
3 |   (statement_block (B)* @xs)? @blk
  |                    ^^^^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
